--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/Folklore_in_Las_Palmas_04.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <img src="img/Gilberto_Gil_na_Exposição_Gil_70.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/Caetano_Veloso_em_Lisboa_(2007).jpg"
+                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
